--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link js-scroll-trigger" href="#projects">Actividades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contacto</a>
+            <a class="nav-link js-scroll-trigger" href="#contacto">Contacto</a>
           </li>
         </ul>
       </div>
@@ -150,7 +150,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section id="contacto" class="contact-section bg-black">
     <div class="container">
 
       <div class="row">
